# AR_GLASS

./: README.md
ASR_server/: server_wss.py
ESP32-1/: CMakeLists.txt  partitions.csv  sdkconfig
ESP32-1/main/: CMakeLists.txt  main.c
ESP32-1/main/http/: http.c  http.h
ESP32-1/main/receive/: receive.c  receive.h
ESP32-1/main/send/: send.c  send.h
ESP32-1/main/wifi/: wifi.c  wifi_configuration.html
ESP32-2/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP32-2/UDPsocPY/: main.py  main2.py
ESP32-2/main/: CMakeLists.txt  blink_example_main.c  idf_component.yml
ESP32-2/main/I2S/: I2Sto.c  I2Sto.h
ESP32-2/main/get_text/: text_storage.c  text_storage.h
ESP32-2/main/http/: http.c  http.h
ESP32-2/main/send_to_stm/: uart_send_to_stm32.c  uart_send_to_stm32.h
ESP32-2/main/websocket/: webto.c  webto.h
ESP32-2/main/wifito/: wifito.c  wifito.h
STM32/: .config  .cproject  .project  rtconfig.h
STM32/applications/: SConscript
STM32/applications/include/: display_function_thread.h  event.h  function1_ctrl.h  function1_display_thread.h  function2_display_thread.h  uart6_rx.h
STM32/applications/src/: display_function_thread.c  event.c  function1_ctrl.c  function1_display_thread.c  function2_display_thread.c  main.c  uart6_rx.c
STM32/drivers/: board.c  board.h
